--- a/src/components/NavBar/style.css
+++ b/src/components/NavBar/style.css
@@ -5,11 +5,6 @@
 	padding: 5px 20px;
 }
 
-.main-nav a {
-	font-weight: bold;
-	color: #2c3e50;
-}
-
 .main-nav a.router-link-exact-active {
 	color: #42b983;
 }
@@ -65,4 +60,9 @@
 
 .main-nav-item:hover {
 	text-decoration: underline;
+}
+.sign {
+	font-weight: bold;
+	color: #2c3e50;
+	cursor: pointer;
 }
