--- a/src/components/NavBar/style.css
+++ b/src/components/NavBar/style.css
@@ -66,3 +66,13 @@
 	color: #2c3e50;
 	cursor: pointer;
 }
+.sign-out-wrapper {
+	display: flex;
+}
+.connected-name {
+	text-decoration: none;
+	font-weight: bold;
+	color: #2c3e50;
+	cursor: pointer;
+	margin-right: 8px;
+}
