--- a/src/components/Modale/style.css
+++ b/src/components/Modale/style.css
@@ -3,7 +3,7 @@
 }
 .openedModale {
 	position: absolute;
-	height: 100vh;
+	min-height: 100vh;
 	width: 100%;
 	z-index: 2;
 	background-color: rgba(96, 96, 96, 0.8);
@@ -11,11 +11,17 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	overflow: auto;
 }
 
 .innerModale {
 	background-color: #ffff;
 	padding: 3vh;
+	height: 15vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 .greenMessage {
 	font-size: 24px;
